<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="6dip"
    android:fadingEdge="none"
    android:scrollbarStyle="outsideInset">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/enmailing_authstatus"
            android:singleLine="false"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textSize="18sp"
	        android:text="@string/account_setup_enmailing_authstatus_default" />
	    <EditText
	        android:id="@+id/enmailing_username"
	        android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_username_label"
	        android:contentDescription="@string/account_setup_enmailing_username_label" />
	    <EditText
	        android:id="@+id/enmailing_password"
	        android:singleLine="true"
	        android:inputType="textPassword"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_password_label"
	        android:contentDescription="@string/account_setup_enmailing_password_label" />
	    <TextView
            android:id="@+id/enmailing_device_desc_desc"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginTop="10sp"
	        android:text="@string/account_setup_enmailing_device_desc_desc" />
	    <EditText
	        android:id="@+id/enmailing_device_desc"
	        android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_device_desc_label"
	        android:contentDescription="@string/account_setup_enmailing_device_desc_label"
	        android:text="@string/account_setup_enmailing_device_desc_default" />
	    <TextView
            android:id="@+id/enmailing_device_full_access_desc"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:text="@string/account_setup_enmailing_full_access_desc" />
	    <CheckBox
            android:id="@+id/enmailing_device_full_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setup_enmailing_full_access_label" />
	    <Button 
	        android:id="@+id/enmailing_authbtn"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/enmailing_authorize" />
	    <Button 
	        android:id="@+id/enmailing_deauthbtn"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/enmailing_deauthorize" />
	    <TextView
            android:id="@+id/enmailing_notify_only_desc"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginTop="20sp"
	        android:text="@string/enmailing_notify_only_summary" />
	    <CheckBox
            android:id="@+id/enmailing_notify_only"
            android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
            android:text="@string/enmailing_notify_only_title" />
	    <Button 
	        android:id="@+id/enmailing_prefs_ok"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="20sp"
	        android:text="@string/okay_action" />
	    <View
	        android:layout_height="0dip"
	        android:layout_width="fill_parent"
	        android:layout_weight="1" />
	</LinearLayout>
</ScrollView>
</LinearLayout>
