<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:padding="6dip"
    android:fadingEdge="none"
    android:scrollbarStyle="outsideInset">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/setup_enmailing_authstatus"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:text="@string/account_setup_enmailing_authstatus_default" />
	    <EditText
	        android:id="@+id/setup_enmailing_username"
	        android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_username_label"
	        android:contentDescription="@string/account_setup_enmailing_username_label" />
	    <EditText
	        android:id="@+id/setup_enmailing_password"
	        android:singleLine="true"
	        android:inputType="textPassword"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_password_label"
	        android:contentDescription="@string/account_setup_enmailing_password_label" />
	    <TextView
            android:id="@+id/setup_enmailing_device_desc_desc"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:text="@string/account_setup_enmailing_device_desc_desc" />
	    <EditText
	        android:id="@+id/setup_enmailing_device_desc"
	        android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:hint="@string/account_setup_enmailing_device_desc_label"
	        android:contentDescription="@string/account_setup_enmailing_device_desc_label"
	        android:text="@string/account_setup_enmailing_device_desc_default" />
	    <TextView
            android:id="@+id/setup_enmailing_full_access_desc"
            android:singleLine="false"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:text="@string/account_setup_enmailing_full_access_desc" />
	    <CheckBox
            android:id="@+id/setup_enmailing_device_full_access"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setup_enmailing_full_access_label" />
	    <Button 
	        android:id="@+id/setup_enmailing_authbtn"
            android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/enmailing_authorize" />
	    <View
	        android:layout_height="0dip"
	        android:layout_width="fill_parent"
	        android:layout_weight="1" />
	</LinearLayout>
</ScrollView>
    <include layout="@layout/wizard_done" />
</LinearLayout>
